Updated model to remove int identifiers
