# backend/internal/database/model/principal.go
@@ -3,10 +3,9 @@ package model
 import "time"
 
 type Principal struct {
-	ID        int64     `json:"id" gorm:"primarykey;autoIncrement"`
-	IsLocked  bool      `json:"is_locked" gorm:"is_locked"`
-	Value     string    `json:"value" gorm:"value;uniqueIndex"`
+	ID        string    `json:"id" gorm:"primarykey"`
 	Roles     []*Role   `json:"roles,omitempty" gorm:"many2many:authz_principals_roles;"`
+	IsLocked  bool      `json:"is_locked" gorm:"is_locked"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
 }
