# backend/internal/database/model/resource.go
@@ -3,10 +3,10 @@ package model
 import "time"
 
 type Resource struct {
-	ID        int64     `json:"id" gorm:"primarykey;autoIncrement"`
-	IsLocked  bool      `json:"is_locked" gorm:"is_locked"`
+	ID        string    `json:"id" gorm:"primarykey"`
 	Kind      string    `json:"kind" gorm:"kind"`
 	Value     string    `json:"value" gorm:"value"`
+	IsLocked  bool      `json:"is_locked" gorm:"is_locked"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
 }
