# backend/internal/http/handler/role.go
@@ -13,29 +13,32 @@ import (
 	"gorm.io/gorm"
 )
 
-type CreatePrincipalRequest struct {
-	ID string `json:"id" validate:"required"`
+type CreateRoleRequest struct {
+	ID       string   `json:"id" validate:"required"`
+	Policies []string `json:"policies" validate:"required"`
 }
 
-type UpdatePrincipalRequest struct{}
+type UpdateRoleRequest struct {
+	Policies []string `json:"policies" validate:"required"`
+}
 
-// Creates a new principal.
+// Creates a new role.
 //
 //	@security	Authentication
-//	@Summary	Creates a new principal
+//	@Summary	Creates a new role
 //	@Tags		Authz
 //	@Produce	json
-//	@Param		default	body		CreatePrincipalRequest	true	"Principal creation request"
-//	@Success	200		{object}	model.Principal
+//	@Param		default	body		CreateRoleRequest	true	"Role creation request"
+//	@Success	200		{object}	model.Role
 //	@Failure	400		{object}	model.ErrorResponse
 //	@Failure	500		{object}	model.ErrorResponse
-//	@Router		/v1/principals [Post]
-func PrincipalCreate(
+//	@Router		/v1/roles [Post]
+func RoleCreate(
 	validate *validator.Validate,
 	manager manager.Manager,
 ) fiber.Handler {
 	return func(c *fiber.Ctx) error {
-		request := &CreatePrincipalRequest{}
+		request := &CreateRoleRequest{}
 
 		// Parse request body
 		if err := c.BodyParser(request); err != nil {
@@ -45,33 +48,34 @@ func PrincipalCreate(
 		// Validate body
 		if err := validateStruct(validate, request); err != nil {
 			return c.Status(fiber.StatusBadRequest).JSON(err)
+
 		}
 
-		// Create principal
-		principal, err := manager.CreatePrincipal(request.ID)
+		// Create role
+		role, err := manager.CreateRole(request.ID, request.Policies)
 		if err != nil {
 			return returnError(c, http.StatusInternalServerError, err)
 		}
 
-		return c.JSON(principal)
+		return c.JSON(role)
 	}
 }
 
-// Lists principals.
+// Lists roles.
 //
 //	@security	Authentication
-//	@Summary	Lists principals
+//	@Summary	Lists roles
 //	@Tags		Authz
 //	@Produce	json
 //	@Param		page	query		int		false	"page number"			example(1)
 //	@Param		size	query		int		false	"page size"				minimum(1)	maximum(1000)	default(100)
-//	@Param		filter	query		string	false	"filter on a field"		example(name:contains:something)
-//	@Param		sort	query		string	false	"sort field and order"	example(name:desc)
-//	@Success	200		{object}	[]model.Principal
+//	@Param		filter	query		string	false	"filter on a field"		example(kind:contains:something)
+//	@Param		sort	query		string	false	"sort field and order"	example(kind:desc)
+//	@Success	200		{object}	[]model.Role
 //	@Failure	400		{object}	model.ErrorResponse
 //	@Failure	500		{object}	model.ErrorResponse
-//	@Router		/v1/principals [Get]
-func PrincipalList(
+//	@Router		/v1/roles [Get]
+func RoleList(
 	manager manager.Manager,
 ) fiber.Handler {
 	return func(c *fiber.Ctx) error {
@@ -80,8 +84,9 @@ func PrincipalList(
 			return returnError(c, http.StatusInternalServerError, err)
 		}
 
-		// List principals
-		principal, total, err := manager.GetPrincipalRepository().Find(
+		// List roles
+		role, total, err := manager.GetRoleRepository().Find(
+			database.WithPreloads("Policies"),
 			database.WithPage(page),
 			database.WithSize(size),
 			database.WithFilter(httpFilterToORM(c)),
@@ -91,28 +96,31 @@ func PrincipalList(
 			return returnError(c, http.StatusInternalServerError, err)
 		}
 
-		return c.JSON(model.NewPaginated(principal, total, page, size))
+		return c.JSON(model.NewPaginated(role, total, page, size))
 	}
 }
 
-// Retrieve a principal.
+// Retrieve a role.
 //
 //	@security	Authentication
-//	@Summary	Retrieve a principal
+//	@Summary	Retrieve a role
 //	@Tags		Authz
 //	@Produce	json
-//	@Success	200	{object}	model.Principal
+//	@Success	200	{object}	model.Role
 //	@Failure	404	{object}	model.ErrorResponse
 //	@Failure	500	{object}	model.ErrorResponse
-//	@Router		/v1/principals/{identifier} [Get]
-func PrincipalGet(
+//	@Router		/v1/roles/{identifier} [Get]
+func RoleGet(
 	manager manager.Manager,
 ) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		identifier := c.Params("identifier")
 
-		// Retrieve principal
-		principal, err := manager.GetPrincipalRepository().Get(identifier)
+		// Retrieve role
+		role, err := manager.GetRoleRepository().Get(
+			identifier,
+			database.WithPreloads("Policies"),
+		)
 		if err != nil {
 			statusCode := http.StatusInternalServerError
 
@@ -121,26 +129,26 @@ func PrincipalGet(
 			}
 
 			return returnError(c, statusCode,
-				fmt.Errorf("cannot retrieve principal: %v", err),
+				fmt.Errorf("cannot retrieve role: %v", err),
 			)
 		}
 
-		return c.JSON(principal)
+		return c.JSON(role)
 	}
 }
 
-// Updates a principal.
+// Updates a role.
 //
 //	@security	Authentication
-//	@Summary	Updates a principal
+//	@Summary	Updates a role
 //	@Tags		Authz
 //	@Produce	json
-//	@Param		default	body		UpdatePrincipalRequest	true	"Principal update request"
-//	@Success	200		{object}	model.Principal
+//	@Param		default	body		UpdateRoleRequest	true	"Role update request"
+//	@Success	200		{object}	model.Role
 //	@Failure	400		{object}	model.ErrorResponse
 //	@Failure	500		{object}	model.ErrorResponse
-//	@Router		/v1/principals/{identifier} [Put]
-func PrincipalUpdate(
+//	@Router		/v1/roles/{identifier} [Put]
+func RoleUpdate(
 	validate *validator.Validate,
 	manager manager.Manager,
 ) fiber.Handler {
@@ -148,7 +156,7 @@ func PrincipalUpdate(
 		identifier := c.Params("identifier")
 
 		// Update request
-		request := &UpdatePrincipalRequest{}
+		request := &UpdateRoleRequest{}
 
 		// Parse request body
 		if err := c.BodyParser(request); err != nil {
@@ -160,53 +168,46 @@ func PrincipalUpdate(
 			return c.Status(fiber.StatusBadRequest).JSON(err)
 		}
 
-		// Retrieve principal
-		principal, err := manager.GetPrincipalRepository().Get(identifier)
+		// Retrieve role
+		role, err := manager.UpdateRole(identifier, request.Policies)
 		if err != nil {
 			return returnError(c, http.StatusInternalServerError,
-				fmt.Errorf("cannot retrieve principal: %v", err),
+				fmt.Errorf("cannot update role: %v", err),
 			)
 		}
 
-		// Update principal
-		if err := manager.GetPrincipalRepository().Update(principal); err != nil {
-			return returnError(c, http.StatusInternalServerError,
-				fmt.Errorf("cannot update principal: %v", err),
-			)
-		}
-
-		return c.JSON(principal)
+		return c.JSON(role)
 	}
 }
 
-// Deletes a principal.
+// Deletes a role.
 //
 //	@security	Authentication
-//	@Summary	Deletes a principal
+//	@Summary	Deletes a role
 //	@Tags		Authz
 //	@Produce	json
-//	@Success	200	{object}	model.Principal
+//	@Success	200	{object}	model.Role
 //	@Failure	400	{object}	model.ErrorResponse
 //	@Failure	500	{object}	model.ErrorResponse
-//	@Router		/v1/principals/{identifier} [Get]
-func PrincipalDelete(
+//	@Router		/v1/roles/{identifier} [Get]
+func RoleDelete(
 	manager manager.Manager,
 ) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		identifier := c.Params("identifier")
 
-		// Retrieve principal
-		principal, err := manager.GetPrincipalRepository().Get(identifier)
+		// Retrieve role
+		role, err := manager.GetRoleRepository().Get(identifier)
 		if err != nil {
 			return returnError(c, http.StatusInternalServerError,
-				fmt.Errorf("cannot retrieve principal: %v", err),
+				fmt.Errorf("cannot retrieve role: %v", err),
 			)
 		}
 
-		// Delete principal
-		if err := manager.GetPrincipalRepository().Delete(principal); err != nil {
+		// Delete role
+		if err := manager.GetRoleRepository().Delete(role); err != nil {
 			return returnError(c, http.StatusInternalServerError,
-				fmt.Errorf("cannot delete principal: %v", err),
+				fmt.Errorf("cannot delete role: %v", err),
 			)
 		}
 
